<resources>
    <string name="app_name">Dicer</string>
    <string name="action_settings">Settings</string>
    <string name="d100">d100</string>
    <string name="d20">d20</string>
    <string name="d12">d12</string>
    <string name="d10">d10</string>
    <string name="d8">d8</string>
    <string name="d6">d6</string>
    <string name="d4">d4</string>
    <string name="d3">d3</string>
    <string name="d2">d2</string>
    <string name="roll_sequence">Roll</string>
    <string name="clear">Clear</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="title_activity_save_favourite">Add Favourite</string>

    <!-- Strings related to login -->
    <string name="btn_save_favourite">Save Dice Roll</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="lblSaveTitle">Save Title:</string>
    <string name="lblDiceSequence">Dice sequence to save:</string>
    <string name="confirm_discard_unsaved">Discard unsaved favourite?</string>
    <string name="lblAboutDescription">The simple dice sequence roller. On the Sequence tab, tap a dice to add it to a sequence. Dice are represnted in the format of [count]d[sides] or 1d6 for a six sided dice. Once you are satisfied with your sequence, add it to favourites tab with the Heart Floating Action Button to save it to the app. Pressing the Backspace button will undo the last sequence addition. Pressing the Trash Floating Action Button will clear the sequence. Tap on a favourite or history list item to reroll the dice updating it and adding a copy of the roll data to the History tab.</string>
    <string name="favDesc">This is where your saved rolls will appear. To save a roll, go back to the \"Roll\" tab and create a sequence of dice. Then press the \"Heart\" icon in the bottom left corner.</string>
    <string name="historyDesc">This is where your previous rolls will appear. Not only will your rolls from the "Roll" tab appear here, but as will tapping a dice sequence in the "Saves" tab, as well as anything that appears here!</string>
</resources>
