<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="32.0"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="5.0">
        <TextView android:textSize="@dimen/textSizeInputLabel" android:gravity="end|center" android:id="@+id/txtSequence" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="8.0dip" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip" android:text="" android:layout_weight="1.0" />
        <ImageButton android:id="@+id/btnDelete" android:visibility="visible" android:layout_width="64.0dip" android:layout_height="fill_parent" android:layout_marginTop="4.0dip" android:layout_marginBottom="4.0dip"
            android:src="@drawable/ic_arrow_back_black"
            android:background="@android:color/transparent" />
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="fill_parent" android:weightSum="4.0" android:layout_weight="5.0">
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD100" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d100" android:layout_weight="1.0" android:textAllCaps="false"  />
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD20" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d20" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD12" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d12" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD10" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d10" android:layout_weight="1.0" android:textAllCaps="false" />
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="fill_parent" android:weightSum="5.0" android:layout_weight="5.0">
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD8" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d8" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD6" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d6" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD4" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d4" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD3" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d3" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:onClick="btnDiceOnClick" android:textSize="@dimen/textSizeDiceButton" android:id="@+id/buttonD2" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/d2" android:layout_weight="1.0" android:textAllCaps="false" />
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/marginLeftRightNumberButton" android:layout_marginTop="@dimen/marginTopButton" android:layout_marginRight="@dimen/marginLeftRightNumberButton" android:weightSum="3.0" android:layout_weight="3.0">
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button7"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n7" android:layout_weight="1.0" />
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button8"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n8" android:layout_weight="1.0" />
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button9"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n9" android:layout_weight="1.0" />
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/marginLeftRightNumberButton" android:layout_marginRight="@dimen/marginLeftRightNumberButton" android:weightSum="3.0" android:layout_weight="3.0">
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button4"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n4" android:layout_weight="1.0" />
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button5"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n5" android:layout_weight="1.0" />
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button6"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n6" android:layout_weight="1.0" />
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/marginLeftRightNumberButton" android:layout_marginRight="@dimen/marginLeftRightNumberButton" android:weightSum="3.0" android:layout_weight="3.0">
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button1"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n1" android:layout_weight="1.0" />
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button2"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n2" android:layout_weight="1.0" />
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button3"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n3" android:layout_weight="1.0" />
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/marginLeftRightNumberButton" android:layout_marginRight="@dimen/marginLeftRightNumberButton" android:weightSum="3.0" android:layout_weight="3.0">
        <Button android:onClick="btnOperandOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/buttonMinus"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/minus" android:layout_weight="1.0" />
        <Button android:onClick="btnNumOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/button0"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/n0" android:layout_weight="1.0" />
        <Button android:onClick="btnOperandOnClick" android:textSize="@dimen/textSizeNumberButton" android:id="@+id/buttonPlus"  android:layout_width="0.0px" android:layout_height="fill_parent" android:layout_margin="@dimen/dice_button_padding" android:text="@string/plus" android:layout_weight="1.0" />
    </TableRow>
    <TableRow android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="@dimen/marginTopButton" android:weightSum="1.0" android:layout_weight="5.0">
        <Button android:onClick="btnRollOnClick" android:textSize="@dimen/textSizeRollButton" android:id="@+id/buttonRoll" android:layout_width="0.0px" android:layout_height="fill_parent" android:text="@string/roll_sequence" android:layout_weight="1.0" />
    </TableRow>
</TableLayout>